--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,13 +3,17 @@
 }
 
 body {
+  height: 100%;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
+  background: url('https://img.freepik.com/free-vector/watercolor-stains-abstract-background_23-2149107181.jpg?w=2000') no-repeat 0 0 scroll;
   color: #212121;
   line-height: 1.5;
+  padding: 30px;
 }
 
 #search-box {
@@ -17,4 +21,42 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+  border: 2px solid rgb(8, 169, 21);
+  border-radius: 10px;
+}
+
+#search-box:focus {
+  border-color: #C6EB41;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+span {
+  font-weight: 500;
+  margin-right: 5px;
+}
+  
+.country-list__item {
+  display: flex;
+  align-items: center;
+}
+    
+.country-list__image {
+  width: 50px;
+  height: 30px;
+}
+  
+.country-list__title {
+  margin-left: 10px;
+  font-size: 16px;
+}
+  
+.country-list__title--one {
+  margin-left: 10px;
+  font-weight: 700;
+  font-size: 25px;
 }
