--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
-  /* background: url('https://img.freepik.com/free-vector/watercolor-stains-abstract-background_23-2149107181.jpg?w=2000') no-repeat 0 0 scroll; */
+  background: url('https://img.freepik.com/free-vector/watercolor-stains-abstract-background_23-2149107181.jpg?w=2000') no-repeat 0 0 scroll;
   color: #212121;
   line-height: 1.5;
   padding: 30px;
