--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,7 +9,7 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #ded3d3;
   background: url('https://img.freepik.com/free-vector/watercolor-stains-abstract-background_23-2149107181.jpg?w=2000') no-repeat 0 0 scroll;
   color: #212121;
   line-height: 1.5;
